--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,8 +8,12 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@fastify/cors": "^9.0.1",
     "@saas/auth": "*",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
+    "D": "^1.0.0",
     "drizzle-orm": "^0.30.10",
     "fastify": "^4.27.0",
     "fastify-type-provider-zod": "^1.1.9",
