--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "turbo lint"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "turbo": "latest"
   },
   "engines": {
