--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "@fastify/cors": "^9.0.1",
+    "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
     "@saas/auth": "*",
