--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,18 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts",
-    "generate": "drizzle-kit generate",
-    "migrate": "drizzle-kit migrate",
-    "seed": "tsx src/db/seed.ts"
+    "env:load": "dotenv -e ../../.env --",
+    "dev": "npm run env:load tsx watch src/http/server.ts",
+    "generate": "npm run env:load drizzle-kit generate",
+    "migrate": "npm run env:load drizzle-kit migrate",
+    "seed": "npm run env:load tsx src/db/seed.ts"
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@faker-js/faker": "^8.4.1",
     "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
     "@saas/auth": "*",
+    "@saas/env": "*",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "D": "^1.0.0",
@@ -30,6 +33,7 @@
     "@saas/prettier": "*",
     "@saas/ts-config": "*",
     "@types/node": "^20.12.11",
+    "dotenv-cli": "^7.4.2",
     "drizzle-kit": "^0.21.1",
     "kleur": "^4.1.5",
     "tsx": "^4.9.3"
