--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "env:load": "dotenv -e ../../.env --",
     "dev": "npm run env:load tsx watch src/http/server.ts",
-    "generate": "npm run env:load drizzle-kit generate",
-    "migrate": "npm run env:load drizzle-kit migrate",
-    "seed": "npm run env:load tsx src/db/seed.ts",
-    "studio": "drizzle-kit studio"
+    "db:generate": "npm run env:load drizzle-kit generate",
+    "db:migrate": "npm run env:load drizzle-kit migrate",
+    "db:seed": "npm run env:load tsx src/db/seed.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "-": "^0.0.1",
