--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,7 +21,8 @@
     "react": "^19.0.0-rc-512b09b2-20240718",
     "react-dom": "^19.0.0-rc-512b09b2-20240718",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@saas/eslint-config": "*",
