--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
     "eslint-config-next": "^15.0.0-rc.0",
     "ky": "^1.4.0",
     "lucide-react": "^0.412.0",
