--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@saas/auth": "*",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@saas/auth": "*",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
@@ -23,6 +23,7 @@
     "ky": "^1.4.0",
     "lucide-react": "^0.412.0",
     "next": "^15.0.0-rc.0",
+    "next-themes": "^0.3.0",
     "react": "^19.0.0-rc-512b09b2-20240718",
     "react-dom": "^19.0.0-rc-512b09b2-20240718",
     "tailwind-merge": "^2.4.0",
